crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__multiline.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "Code:\n\n{\n    x = 1,\n    y = 2,\n    z = 3\n}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Record(
        [
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 5,
                        },
                        end: Position {
                            line: 2,
                            column: 6,
                        },
                    },
                    value: "x",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 2,
                            column: 9,
                        },
                        end: Position {
                            line: 2,
                            column: 10,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 5,
                        },
                        end: Position {
                            line: 3,
                            column: 6,
                        },
                    },
                    value: "y",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 9,
                        },
                        end: Position {
                            line: 3,
                            column: 10,
                        },
                    },
                    value: Int(
                        2,
                    ),
                },
            },
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 5,
                        },
                        end: Position {
                            line: 4,
                            column: 6,
                        },
                    },
                    value: "z",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 9,
                        },
                        end: Position {
                            line: 4,
                            column: 10,
                        },
                    },
                    value: Int(
                        3,
                    ),
                },
            },
        ],
    ),
}
