crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__nested_record.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ pos: { x: 1, y: 2 } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 24,
        },
    },
    value: Record(
        [
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: "pos",
                },
                value: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 8,
                            },
                            end: Position {
                                line: 1,
                                column: 22,
                            },
                        },
                        value: Record(
                            [
                                Field {
                                    name: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 10,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 11,
                                            },
                                        },
                                        value: "x",
                                    },
                                    value: Some(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 13,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 14,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 1.0,
                                                    text: "1",
                                                },
                                            ),
                                        },
                                    ),
                                },
                                Field {
                                    name: Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 16,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 17,
                                            },
                                        },
                                        value: "y",
                                    },
                                    value: Some(
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 1,
                                                    column: 19,
                                                },
                                                end: Position {
                                                    line: 1,
                                                    column: 20,
                                                },
                                            },
                                            value: Number(
                                                NumberLit {
                                                    value: 2.0,
                                                    text: "2",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        ),
                    },
                ),
            },
        ],
    ),
}
