crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__shorthand_single.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ x }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 6,
        },
    },
    value: Record(
        [
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "x",
                },
                value: None,
            },
        ],
    ),
}
