crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__spread_first.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ ..user, name }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: Record(
        [
            Spread(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 9,
                        },
                    },
                    value: Var(
                        "user",
                    ),
                },
            ),
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 11,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: "name",
                },
                value: None,
            },
        ],
    ),
}
