crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__spread_only.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ ..r }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 8,
        },
    },
    value: Record(
        [
            Spread(
                Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 5,
                        },
                        end: Position {
                            line: 1,
                            column: 6,
                        },
                    },
                    value: Var(
                        "r",
                    ),
                },
            ),
        ],
    ),
}
