crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__two_fields.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "{ x: 1, y: 2 }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Record(
        [
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 3,
                        },
                        end: Position {
                            line: 1,
                            column: 4,
                        },
                    },
                    value: "x",
                },
                value: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 1.0,
                                text: "1",
                            },
                        ),
                    },
                ),
            },
            Field {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 9,
                        },
                        end: Position {
                            line: 1,
                            column: 10,
                        },
                    },
                    value: "y",
                },
                value: Some(
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 13,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 2.0,
                                text: "2",
                            },
                        ),
                    },
                ),
            },
        ],
    ),
}
