crates/alder-parse/src/expression/snapshots/alder_parse__expression__record__tests__update_multiline.snap
---
source: crates/alder-parse/src/expression/record.rs
description: "Code:\n\n{\n    model\n    | x = 1,\n      y = 2\n}"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: Update {
        record: Located {
            region: Region {
                start: Position {
                    line: 2,
                    column: 5,
                },
                end: Position {
                    line: 2,
                    column: 10,
                },
            },
            value: "model",
        },
        fields: [
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 7,
                        },
                        end: Position {
                            line: 3,
                            column: 8,
                        },
                    },
                    value: "x",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 11,
                        },
                        end: Position {
                            line: 3,
                            column: 12,
                        },
                    },
                    value: Int(
                        1,
                    ),
                },
            },
            FieldAssign {
                field: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 7,
                        },
                        end: Position {
                            line: 4,
                            column: 8,
                        },
                    },
                    value: "y",
                },
                value: Located {
                    region: Region {
                        start: Position {
                            line: 4,
                            column: 11,
                        },
                        end: Position {
                            line: 4,
                            column: 12,
                        },
                    },
                    value: Int(
                        2,
                    ),
                },
            },
        ],
    },
}
